--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.1",
     "react-router-dom": "^6.10.0",
     "react-viewerjs": "^0.1.9",
     "sass": "^1.62.0"
